[package]
name = "rust_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
tokio = {version = "1.35", features = ["full"]}
reqwest = {version ="0.11.23"}
ssh2 = {version = "0.9"}
anyhow = {version = "1.0"}
